--- a/Lab_Week2/lab2_PythonRecap.ipynb
+++ b/Lab_Week2/lab2_PythonRecap.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d0913a5d",
    "metadata": {},
    "outputs": [
@@ -37,15 +37,21 @@
      "output_type": "stream",
      "text": [
       "[8, 7]\n",
-      "[2, 3, -1]\n",
+      "[-1, 2, 3]\n",
       "[]\n"
      ]
     }
    ],
    "source": [
     "def repeating_elements(nums):\n",
-    "    #your code here\n",
-    "    ...\n",
+    "    list = []\n",
+    "    for i in range(len(nums)):\n",
+    "        for j in range(i + 1, len(nums)):\n",
+    "            if nums[i] == nums[j]:\n",
+    "                list.append(nums[i])\n",
+    "        else:\n",
+    "            continue\n",
+    "    return list\n",
     "\n",
     "print(repeating_elements([9, 8, 7, 8, 7, 6, 5]))  # expected output : [8, 7]\n",
     "print(repeating_elements([-1, 2, 3, -1, 2, 3]))   # expected output : [-1, 2, 3]\n",
@@ -91,9 +97,7 @@
    ],
    "source": [
     "def isAnagram(s, t):\n",
-    "    #your code here\n",
-    "    ...\n",
-    "\n",
+    "    \n",
     "print(isAnagram(\"anagram\", \"nagaram\")) # expected output : True\n",
     "print(isAnagram(\"rat\", \"car\"))       # expected output : False"
    ]
@@ -304,7 +308,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -318,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
