--- a/Lab_Week2/lab2_PythonRecap.ipynb
+++ b/Lab_Week2/lab2_PythonRecap.ipynb
@@ -90,6 +90,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "['a', 'a', 'a', 'g', 'm', 'n', 'r']\n",
+      "['a', 'a', 'a', 'g', 'm', 'n', 'r']\n",
       "True\n",
       "False\n"
      ]
@@ -97,7 +99,8 @@
    ],
    "source": [
     "def isAnagram(s, t):\n",
-    "    \n",
+    "    return sorted(s) == sorted(t)\n",
+    "\n",
     "print(isAnagram(\"anagram\", \"nagaram\")) # expected output : True\n",
     "print(isAnagram(\"rat\", \"car\"))       # expected output : False"
    ]
