--- a/Lab_Week2/lab2_PythonRecap.ipynb
+++ b/Lab_Week2/lab2_PythonRecap.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d2bce3de",
    "metadata": {},
    "outputs": [
@@ -148,8 +148,11 @@
    ],
    "source": [
     "def twoSum(nums, target):\n",
-    "    #your code here\n",
-    "    ...\n",
+    "    for i in range(len(nums)):\n",
+    "        for j in range(i + 1, len(nums)):\n",
+    "            if nums[i] + nums[j] == target:\n",
+    "                return [i, j]\n",
+    "    return []\n",
     "\n",
     "print(twoSum([2,7,11,15], 9)) # expected output : [0, 1]\n",
     "print(twoSum([3,2,4], 6))     # expected output : [1, 2]\n",
