--- a/Lab_Week2/lab2_PythonRecap.ipynb
+++ b/Lab_Week2/lab2_PythonRecap.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "d2bce3de",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
      "text": [
       "[0, 1]\n",
       "[1, 2]\n",
-      "[0, 1]\n"
+      "[]\n"
      ]
     }
    ],
@@ -150,7 +150,7 @@
     "def twoSum(nums, target):\n",
     "    for i in range(len(nums)):\n",
     "        for j in range(i + 1, len(nums)):\n",
-    "            if nums[i] + nums[j] == target:\n",
+    "            if nums[i] + nums[j] == target and nums[i] != nums[j]:\n",
     "                return [i, j]\n",
     "    return []\n",
     "\n",
@@ -190,18 +190,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('the', 4), ('sun', 2), ('in', 2)]\n",
-      "[('python', 3), ('is', 2), ('learning', 1)]\n",
+      "[('The', 1), ('sun', 2), ('sets', 1), ('in', 2), ('the', 3), ('west,', 1), ('and', 1), ('rises', 1), ('east.', 1)]\n",
+      "[('Learning', 1), ('Python', 3), ('is', 2), ('fun', 1), ('because', 1), ('makes', 1), ('automation', 1), ('easy', 1), ('and', 1), ('everywhere.', 1)]\n",
       "[]\n"
      ]
     }
    ],
    "source": [
     "def frequent_words_finder(text):\n",
-    "    #your code here\n",
-    "    ...\n",
+    "    input = text.split()\n",
+    "    output = []\n",
+    "    for i in input:\n",
+    "        if input.count(i) >= 1:\n",
+    "            if ((i, input.count(i)) in output) == False:\n",
+    "                output.append((i, input.count(i)))\n",
+    "            \n",
+    "    return output\n",
+    "    \n",
     "\n",
     "print(frequent_words_finder(\"The sun sets in the west, and the sun rises in the east.\"))\n",
+    "\n",
     "# expected: [('the', 4), ('sun', 2), ('in', 2)]\n",
     "\n",
     "print(frequent_words_finder(\"Learning Python is fun because Python makes automation easy and Python is everywhere.\"))\n",
