--- a/Lab_Week2/lab2_PythonRecap.ipynb
+++ b/Lab_Week2/lab2_PythonRecap.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "d9195873",
    "metadata": {},
    "outputs": [
@@ -90,16 +90,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['a', 'a', 'a', 'g', 'm', 'n', 'r']\n",
-      "['a', 'a', 'a', 'g', 'm', 'n', 'r']\n",
-      "True\n",
+      "False\n",
       "False\n"
      ]
     }
    ],
    "source": [
     "def isAnagram(s, t):\n",
-    "    return sorted(s) == sorted(t)\n",
+    "    input = s.split();\n",
+    "    output = t.split();\n",
+    "    for i in range(len(input)):\n",
+    "        for j in range(len(output)):\n",
+    "            if input[i] == output[j]:\n",
+    "                    print(input[i] , \", \" , output[i]);\n",
+    "                    output.remove(j)\n",
+    "                    break\n",
+    "\n",
+    "    if len(output) == 0:\n",
+    "        return True;\n",
+    "    else:\n",
+    "        return False;\n",
+    "\n",
+    "\n",
     "\n",
     "print(isAnagram(\"anagram\", \"nagaram\")) # expected output : True\n",
     "print(isAnagram(\"rat\", \"car\"))       # expected output : False"
@@ -253,7 +265,6 @@
    ],
    "source": [
     "def majority_vote(listA):\n",
-    "    #your code here\n",
     "    ...\n",
     "\n",
     "print(majority_vote([3, 3, 4, 2, 4, 4, 2, 4, 4])) # expected output : 4\n",
