--- a/Lab_Week3_Numpy/lab3_Exercise.ipynb
+++ b/Lab_Week3_Numpy/lab3_Exercise.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
        "array([ 5,  2, 17])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "       [9, 4, 1]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +534,7 @@
        "array([10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,12 +706,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### (bonus) every other element of a  "
+    "#### Print every other element of a\n",
+    "Hint: use slicing with a step (`array[start:stop:step]`)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -725,6 +726,21 @@
      "output_type": "execute_result"
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Print the `even` elements of a\n",
+    "Hint: use boolean indexing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -757,6 +773,35 @@
      "output_type": "execute_result"
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Calculate the `sum` of all the elements in a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Calculate the sum of each column and each row in `m`\n",
+    "Hint: use the `axis` argument of the `sum` method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -800,35 +845,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Bonus task\n",
-    "Write code that lists all available dtypes with specified number of bits "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "numpy.int8"
-      ]
-     },
-     "execution_count": 104,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Hint\n",
-    "np.int8"
-   ]
   },
   {
    "cell_type": "markdown",
@@ -989,36 +1005,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Plot the precipitation as a function of max temperature\n",
-    "You probably don't want a line connecting the dots.\n",
-    "Are there any patterns you can spot?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Plot the precipitation as a function of (t_max - t_min)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Read about plt.hist() function and plot a histogram of the maximum temperatures"
    ]
   },
@@ -1091,7 +1077,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".comp3122",
    "language": "python",
    "name": "python3"
   },
@@ -1105,7 +1091,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
