--- a/Lab_Week3_Numpy/lab3_Exercise.ipynb
+++ b/Lab_Week3_Numpy/lab3_Exercise.ipynb
@@ -1077,7 +1077,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".comp3122",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1091,7 +1091,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
