--- a/Lab_Week3_Numpy/lab3_Reading.ipynb
+++ b/Lab_Week3_Numpy/lab3_Reading.ipynb
@@ -923,7 +923,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".pydata",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -937,7 +937,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
