image link modified

--- a/Lab_Week4_Pandas/Lab4_Exercise.ipynb
+++ b/Lab_Week4_Pandas/Lab4_Exercise.ipynb
@@ -12,7 +12,9 @@
     "As a data analyst, you are examining public transportation accessibility in Buenos Aires, Argentina, for an upcoming project. You are particularly interested in the subway system as an efficient way to navigate the city. You will first focus on the Pueyrredon station on Line D of the subway and examine its ridership.\n",
     "\n",
     "<div style=\"text-align: center;\">\n",
-    "    <img src=\"imgs/subway_map_wcircle.jpg\" alt=\"Subway map\" width=\"600\"/>\n",
+    "    <!-- <img src=\"imgs/subway_map_wcircle.jpg\" alt=\"Subway map\" width=\"600\"/> -->\n",
+    "    <img src=\"https://raw.githubusercontent.com/PyDataGBC/PyData2025/refs/heads/main/Lab_Week4_Pandas/imgs/subway_map_wcircle.jpg\" alt=\"Subway map\" width=\"600\"/>\n",
+    "    \n",
     "</div>\n",
     "\n",
     "<div style=\"text-align: center;\">\n",
