--- a/Lab_Week4_Pandas/Lab4_Exercise.ipynb
+++ b/Lab_Week4_Pandas/Lab4_Exercise.ipynb
@@ -44,11 +44,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# impot pandas here"
+    "# %pip install pandas\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -1025,7 +1026,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".comp3122",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1039,7 +1040,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
