--- a/Lab_Week4_Pandas/Lab4_Exercise.ipynb
+++ b/Lab_Week4_Pandas/Lab4_Exercise.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,16 +87,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>datetime</th>\n",
+       "      <th>station</th>\n",
+       "      <th>line</th>\n",
+       "      <th>pax_pagos</th>\n",
+       "      <th>pax_pases_pagos</th>\n",
+       "      <th>pax_franq</th>\n",
+       "      <th>pax_TOTAL</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2024-03-01 08:00:00</td>\n",
+       "      <td>Pueyrredon.D</td>\n",
+       "      <td>D</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2024-03-01 09:00:00</td>\n",
+       "      <td>Pueyrredon.D</td>\n",
+       "      <td>D</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024-03-01 10:00:00</td>\n",
+       "      <td>Pueyrredon.D</td>\n",
+       "      <td>D</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2024-03-01 11:00:00</td>\n",
+       "      <td>Pueyrredon.D</td>\n",
+       "      <td>D</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2024-03-02 08:00:00</td>\n",
+       "      <td>Pueyrredon.D</td>\n",
+       "      <td>D</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              datetime       station line  pax_pagos  pax_pases_pagos  \\\n",
+       "0  2024-03-01 08:00:00  Pueyrredon.D    D          0                0   \n",
+       "1  2024-03-01 09:00:00  Pueyrredon.D    D          0                0   \n",
+       "2  2024-03-01 10:00:00  Pueyrredon.D    D          0                0   \n",
+       "3  2024-03-01 11:00:00  Pueyrredon.D    D          0                0   \n",
+       "4  2024-03-02 08:00:00  Pueyrredon.D    D          0                0   \n",
+       "\n",
+       "   pax_franq  pax_TOTAL  \n",
+       "0          6          6  \n",
+       "1          5          5  \n",
+       "2          2          2  \n",
+       "3          3          3  \n",
+       "4          1          1  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "### START CODE HERE ###\n",
     "#Load the CSV to a DataFrame and save it in a variable called df.\n",
-    "df = None\n",
+    "df = pd.read_csv(\"pueyrredon_march2024_8-11.csv\")\n",
     "\n",
     "# Preview the first 5 rows.\n",
-    "None\n",
+    "df.head()\n",
     "\n",
     "### END CODE HERE ###"
    ]
@@ -110,9 +216,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>datetime</th>\n",
+       "      <th>station</th>\n",
+       "      <th>line</th>\n",
+       "      <th>pax_pagos</th>\n",
+       "      <th>pax_pases_pagos</th>\n",
+       "      <th>pax_franq</th>\n",
+       "      <th>pax_TOTAL</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2024-03-04 09:00:00</td>\n",
+       "      <td>Pueyrredon.D</td>\n",
+       "      <td>D</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>2024-03-10 11:00:00</td>\n",
+       "      <td>Pueyrredon.D</td>\n",
+       "      <td>D</td>\n",
+       "      <td>104</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>2024-03-17 09:00:00</td>\n",
+       "      <td>Pueyrredon.D</td>\n",
+       "      <td>D</td>\n",
+       "      <td>41</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>2024-03-12 09:00:00</td>\n",
+       "      <td>Pueyrredon.D</td>\n",
+       "      <td>D</td>\n",
+       "      <td>344</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23</td>\n",
+       "      <td>367</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>2024-03-08 11:00:00</td>\n",
+       "      <td>Pueyrredon.D</td>\n",
+       "      <td>D</td>\n",
+       "      <td>396</td>\n",
+       "      <td>0</td>\n",
+       "      <td>19</td>\n",
+       "      <td>415</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>2024-03-11 09:00:00</td>\n",
+       "      <td>Pueyrredon.D</td>\n",
+       "      <td>D</td>\n",
+       "      <td>417</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>433</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2024-03-06 08:00:00</td>\n",
+       "      <td>Pueyrredon.D</td>\n",
+       "      <td>D</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>2024-03-14 08:00:00</td>\n",
+       "      <td>Pueyrredon.D</td>\n",
+       "      <td>D</td>\n",
+       "      <td>390</td>\n",
+       "      <td>0</td>\n",
+       "      <td>13</td>\n",
+       "      <td>403</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <td>2024-03-26 08:00:00</td>\n",
+       "      <td>Pueyrredon.D</td>\n",
+       "      <td>D</td>\n",
+       "      <td>438</td>\n",
+       "      <td>0</td>\n",
+       "      <td>26</td>\n",
+       "      <td>464</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>2024-03-08 09:00:00</td>\n",
+       "      <td>Pueyrredon.D</td>\n",
+       "      <td>D</td>\n",
+       "      <td>365</td>\n",
+       "      <td>0</td>\n",
+       "      <td>28</td>\n",
+       "      <td>393</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               datetime       station line  pax_pagos  pax_pases_pagos  \\\n",
+       "6   2024-03-04 09:00:00  Pueyrredon.D    D          0                0   \n",
+       "31  2024-03-10 11:00:00  Pueyrredon.D    D        104                0   \n",
+       "57  2024-03-17 09:00:00  Pueyrredon.D    D         41                0   \n",
+       "37  2024-03-12 09:00:00  Pueyrredon.D    D        344                0   \n",
+       "23  2024-03-08 11:00:00  Pueyrredon.D    D        396                0   \n",
+       "33  2024-03-11 09:00:00  Pueyrredon.D    D        417                0   \n",
+       "12  2024-03-06 08:00:00  Pueyrredon.D    D          0                0   \n",
+       "44  2024-03-14 08:00:00  Pueyrredon.D    D        390                0   \n",
+       "92  2024-03-26 08:00:00  Pueyrredon.D    D        438                0   \n",
+       "21  2024-03-08 09:00:00  Pueyrredon.D    D        365                0   \n",
+       "\n",
+       "    pax_franq  pax_TOTAL  \n",
+       "6           4          4  \n",
+       "31          0        104  \n",
+       "57          2         43  \n",
+       "37         23        367  \n",
+       "23         19        415  \n",
+       "33         16        433  \n",
+       "12          2          2  \n",
+       "44         13        403  \n",
+       "92         26        464  \n",
+       "21         28        393  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Get 10 random samples\n",
     "df.sample(10)"
@@ -138,17 +410,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The columns of the dataset are: ['datetime', 'station', 'line', 'pax_pagos', 'pax_pases_pagos', 'pax_franq', 'pax_TOTAL']\n",
+      "\n",
+      "The data types of each column are:\n",
+      "\n",
+      "datetime           object\n",
+      "station            object\n",
+      "line               object\n",
+      "pax_pagos           int64\n",
+      "pax_pases_pagos     int64\n",
+      "pax_franq           int64\n",
+      "pax_TOTAL           int64\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
    "source": [
     "### START CODE HERE ###\n",
     "\n",
     "# Get the columns\n",
-    "df_columns = None\n",
+    "df_columns = df.columns\n",
     "\n",
     "# Get the datatypes\n",
-    "df_dtypes = None\n",
+    "df_dtypes = df.dtypes\n",
     "\n",
     "### END CODE HERE ###\n",
     "\n",
@@ -168,9 +459,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 116 entries, 0 to 115\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column           Non-Null Count  Dtype \n",
+      "---  ------           --------------  ----- \n",
+      " 0   datetime         116 non-null    object\n",
+      " 1   station          116 non-null    object\n",
+      " 2   line             116 non-null    object\n",
+      " 3   pax_pagos        116 non-null    int64 \n",
+      " 4   pax_pases_pagos  116 non-null    int64 \n",
+      " 5   pax_franq        116 non-null    int64 \n",
+      " 6   pax_TOTAL        116 non-null    int64 \n",
+      "dtypes: int64(4), object(3)\n",
+      "memory usage: 6.5+ KB\n"
+     ]
+    }
+   ],
    "source": [
     "# Print a summary of the features\n",
     "df.info()"
