--- a/Lab_Week4_Pandas/Lab4_Exercise.ipynb
+++ b/Lab_Week4_Pandas/Lab4_Exercise.ipynb
@@ -513,20 +513,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>datetime</th>\n",
+       "      <th>pax_pagos</th>\n",
+       "      <th>pax_pases_pagos</th>\n",
+       "      <th>pax_franq</th>\n",
+       "      <th>pax_TOTAL</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2024-03-01 08:00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2024-03-01 09:00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024-03-01 10:00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2024-03-01 11:00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2024-03-02 08:00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              datetime  pax_pagos  pax_pases_pagos  pax_franq  pax_TOTAL\n",
+       "0  2024-03-01 08:00:00          0                0          6          6\n",
+       "1  2024-03-01 09:00:00          0                0          5          5\n",
+       "2  2024-03-01 10:00:00          0                0          2          2\n",
+       "3  2024-03-01 11:00:00          0                0          3          3\n",
+       "4  2024-03-02 08:00:00          0                0          1          1"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "### START CODE HERE ###\n",
     "\n",
     "# Get the list of features without `station` and `line`.\n",
-    "columns = [None]\n",
+    "columns = [col for col in df_columns if col not in [\"station\", \"line\"]]\n",
     "\n",
     "# Select the columns in the list above.\n",
-    "df_pax = None\n",
+    "df_pax = df[columns]\n",
     "\n",
     "# Preview the simplified DataFrame.\n",
-    "None\n",
+    "df_pax.head()\n",
     "\n",
     "### END CODE HERE ###"
    ]
@@ -553,23 +640,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percent of `pax_pagos`: 93.89642215324294\n",
+      "Percent of `pax_pases_pagos`: 0.04247671949027937\n",
+      "Percent of `pax_franq`: 6.061101127266786\n"
+     ]
+    }
+   ],
    "source": [
     "### START CODE HERE ###\n",
     "\n",
     "# Get the sum for `pax_pagos`\n",
-    "df_pax_pagos = None\n",
+    "df_pax_pagos = df_pax[\"pax_pagos\"].sum()\n",
     "\n",
     "# Get the sum for `pax_pases_pagos`\n",
-    "df_pax_pases_pagos = None\n",
+    "df_pax_pases_pagos = df_pax[\"pax_pases_pagos\"].sum()\n",
     "\n",
     "# Get the sum for `pax_franq`\n",
-    "df_pax_franq = None\n",
+    "df_pax_franq = df_pax[\"pax_franq\"].sum()\n",
     "\n",
     "# Get the sum for `pax_TOTAL`\n",
-    "df_pax_total = None\n",
+    "df_pax_total = df_pax[\"pax_TOTAL\"].sum()\n",
     "\n",
     "### END CODE HERE ###\n",
     "\n",
