--- a/Lab_Week1/lab1_Introduction.ipynb
+++ b/Lab_Week1/lab1_Introduction.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1082,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".comp3122",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1096,7 +1096,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
