--- a/Lab_Week6_Regression/Lab6_Exercise.ipynb
+++ b/Lab_Week6_Regression/Lab6_Exercise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
        "[5 rows x 81 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -726,19 +726,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Id', 'MSSubClass', 'MSZoning', 'LotFrontage', 'LotArea', 'Street', 'Alley', 'LotShape', 'LandContour', 'Utilities', 'LotConfig', 'LandSlope', 'Neighborhood', 'Condition1', 'Condition2', 'BldgType', 'HouseStyle', 'OverallQual', 'OverallCond', 'YearBuilt', 'YearRemodAdd', 'RoofStyle', 'RoofMatl', 'Exterior1st', 'Exterior2nd', 'MasVnrType', 'MasVnrArea', 'ExterQual', 'ExterCond', 'Foundation', 'BsmtQual', 'BsmtCond', 'BsmtExposure', 'BsmtFinType1', 'BsmtFinSF1', 'BsmtFinType2', 'BsmtFinSF2', 'BsmtUnfSF', 'TotalBsmtSF', 'Heating', 'HeatingQC', 'CentralAir', 'Electrical', '1stFlrSF', '2ndFlrSF', 'LowQualFinSF', 'GrLivArea', 'BsmtFullBath', 'BsmtHalfBath', 'FullBath', 'HalfBath', 'BedroomAbvGr', 'KitchenAbvGr', 'KitchenQual', 'TotRmsAbvGrd', 'Functional', 'Fireplaces', 'FireplaceQu', 'GarageType', 'GarageYrBlt', 'GarageFinish', 'GarageCars', 'GarageArea', 'GarageQual', 'GarageCond', 'PavedDrive', 'WoodDeckSF', 'OpenPorchSF', 'EnclosedPorch', '3SsnPorch', 'ScreenPorch', 'PoolArea', 'PoolQC', 'Fence', 'MiscFeature', 'MiscVal', 'MoSold', 'YrSold', 'SaleType', 'SaleCondition', 'SalePrice']\n"
-     ]
+     "data": {
+      "text/plain": [
+       "Index(['Id', 'MSSubClass', 'MSZoning', 'LotFrontage', 'LotArea', 'Street',\n",
+       "       'Alley', 'LotShape', 'LandContour', 'Utilities', 'LotConfig',\n",
+       "       'LandSlope', 'Neighborhood', 'Condition1', 'Condition2', 'BldgType',\n",
+       "       'HouseStyle', 'OverallQual', 'OverallCond', 'YearBuilt', 'YearRemodAdd',\n",
+       "       'RoofStyle', 'RoofMatl', 'Exterior1st', 'Exterior2nd', 'MasVnrType',\n",
+       "       'MasVnrArea', 'ExterQual', 'ExterCond', 'Foundation', 'BsmtQual',\n",
+       "       'BsmtCond', 'BsmtExposure', 'BsmtFinType1', 'BsmtFinSF1',\n",
+       "       'BsmtFinType2', 'BsmtFinSF2', 'BsmtUnfSF', 'TotalBsmtSF', 'Heating',\n",
+       "       'HeatingQC', 'CentralAir', 'Electrical', '1stFlrSF', '2ndFlrSF',\n",
+       "       'LowQualFinSF', 'GrLivArea', 'BsmtFullBath', 'BsmtHalfBath', 'FullBath',\n",
+       "       'HalfBath', 'BedroomAbvGr', 'KitchenAbvGr', 'KitchenQual',\n",
+       "       'TotRmsAbvGrd', 'Functional', 'Fireplaces', 'FireplaceQu', 'GarageType',\n",
+       "       'GarageYrBlt', 'GarageFinish', 'GarageCars', 'GarageArea', 'GarageQual',\n",
+       "       'GarageCond', 'PavedDrive', 'WoodDeckSF', 'OpenPorchSF',\n",
+       "       'EnclosedPorch', '3SsnPorch', 'ScreenPorch', 'PoolArea', 'PoolQC',\n",
+       "       'Fence', 'MiscFeature', 'MiscVal', 'MoSold', 'YrSold', 'SaleType',\n",
+       "       'SaleCondition', 'SalePrice'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(list(df_train.columns))"
+    "df_train.columns\n"
    ]
   },
   {
@@ -785,10 +805,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Id                int64\n",
+      "MSSubClass        int64\n",
+      "MSZoning         object\n",
+      "LotFrontage      object\n",
+      "LotArea           int64\n",
+      "Street           object\n",
+      "Alley            object\n",
+      "LotShape         object\n",
+      "LandContour      object\n",
+      "Utilities        object\n",
+      "LotConfig        object\n",
+      "LandSlope        object\n",
+      "Neighborhood     object\n",
+      "Condition1       object\n",
+      "Condition2       object\n",
+      "BldgType         object\n",
+      "HouseStyle       object\n",
+      "OverallQual       int64\n",
+      "OverallCond       int64\n",
+      "YearBuilt         int64\n",
+      "YearRemodAdd      int64\n",
+      "RoofStyle        object\n",
+      "RoofMatl         object\n",
+      "Exterior1st      object\n",
+      "Exterior2nd      object\n",
+      "MasVnrType       object\n",
+      "MasVnrArea       object\n",
+      "ExterQual        object\n",
+      "ExterCond        object\n",
+      "Foundation       object\n",
+      "BsmtQual         object\n",
+      "BsmtCond         object\n",
+      "BsmtExposure     object\n",
+      "BsmtFinType1     object\n",
+      "BsmtFinSF1        int64\n",
+      "BsmtFinType2     object\n",
+      "BsmtFinSF2        int64\n",
+      "BsmtUnfSF         int64\n",
+      "TotalBsmtSF       int64\n",
+      "Heating          object\n",
+      "HeatingQC        object\n",
+      "CentralAir       object\n",
+      "Electrical       object\n",
+      "1stFlrSF          int64\n",
+      "2ndFlrSF          int64\n",
+      "LowQualFinSF      int64\n",
+      "GrLivArea         int64\n",
+      "BsmtFullBath      int64\n",
+      "BsmtHalfBath      int64\n",
+      "FullBath          int64\n",
+      "HalfBath          int64\n",
+      "BedroomAbvGr      int64\n",
+      "KitchenAbvGr      int64\n",
+      "KitchenQual      object\n",
+      "TotRmsAbvGrd      int64\n",
+      "Functional       object\n",
+      "Fireplaces        int64\n",
+      "FireplaceQu      object\n",
+      "GarageType       object\n",
+      "GarageYrBlt      object\n",
+      "GarageFinish     object\n",
+      "GarageCars        int64\n",
+      "GarageArea        int64\n",
+      "GarageQual       object\n",
+      "GarageCond       object\n",
+      "PavedDrive       object\n",
+      "WoodDeckSF        int64\n",
+      "OpenPorchSF       int64\n",
+      "EnclosedPorch     int64\n",
+      "3SsnPorch         int64\n",
+      "ScreenPorch       int64\n",
+      "PoolArea          int64\n",
+      "PoolQC           object\n",
+      "Fence            object\n",
+      "MiscFeature      object\n",
+      "MiscVal           int64\n",
+      "MoSold            int64\n",
+      "YrSold            int64\n",
+      "SaleType         object\n",
+      "SaleCondition    object\n",
+      "SalePrice         int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_train.dtypes.to_string())"
+   ]
   },
   {
    "cell_type": "code",
@@ -896,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -915,13 +1025,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{dtype('int64'), dtype('O'), dtype('float64')}\n"
+     ]
+    }
+   ],
    "source": [
     "## Convert two columns of test dataframe to 'numeric' type as mentioned above\n",
     "df_test['LotFrontage'] = pd.to_numeric(df_test['LotFrontage'], errors='coerce')\n",
-    "df_test['MasVnrArea'] = pd.to_numeric(df_test['MasVnrArea'], errors='coerce')"
+    "df_test['MasVnrArea'] = pd.to_numeric(df_test['MasVnrArea'], errors='coerce')\n",
+    "\n"
    ]
   },
   {
@@ -933,10 +1052,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{dtype('int64'), dtype('O'), dtype('float64')}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in ['LotFrontage', 'MasVnrArea']:\n",
+    "    df_train[col] = pd.to_numeric(df_train[col], errors='coerce')\n",
+    "    df_test[col] = pd.to_numeric(df_test[col], errors='coerce')\n",
+    "\n",
+    "print(set(df_train.dtypes.values))"
+   ]
   },
   {
    "cell_type": "code",
@@ -1010,10 +1143,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LotFrontage      227\n",
+      "MasVnrArea        15\n",
+      "Id                 0\n",
+      "BedroomAbvGr       0\n",
+      "GarageType         0\n",
+      "                ... \n",
+      "ExterQual          0\n",
+      "MasVnrType         0\n",
+      "Exterior2nd        0\n",
+      "Exterior1st        0\n",
+      "SaleCondition      0\n",
+      "Length: 80, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_test.isnull().sum().sort_values(ascending=False))"
+   ]
   },
   {
    "cell_type": "code",
@@ -1063,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4996,7 +5150,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".comp3122",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -5010,7 +5164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
