--- a/Lab_Week4_Pandas/Lab4_Exercise.ipynb
+++ b/Lab_Week4_Pandas/Lab4_Exercise.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
        "4          1          1  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,173 +216,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>datetime</th>\n",
-       "      <th>station</th>\n",
-       "      <th>line</th>\n",
-       "      <th>pax_pagos</th>\n",
-       "      <th>pax_pases_pagos</th>\n",
-       "      <th>pax_franq</th>\n",
-       "      <th>pax_TOTAL</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2024-03-04 09:00:00</td>\n",
-       "      <td>Pueyrredon.D</td>\n",
-       "      <td>D</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>2024-03-10 11:00:00</td>\n",
-       "      <td>Pueyrredon.D</td>\n",
-       "      <td>D</td>\n",
-       "      <td>104</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>104</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>57</th>\n",
-       "      <td>2024-03-17 09:00:00</td>\n",
-       "      <td>Pueyrredon.D</td>\n",
-       "      <td>D</td>\n",
-       "      <td>41</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>43</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>2024-03-12 09:00:00</td>\n",
-       "      <td>Pueyrredon.D</td>\n",
-       "      <td>D</td>\n",
-       "      <td>344</td>\n",
-       "      <td>0</td>\n",
-       "      <td>23</td>\n",
-       "      <td>367</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>2024-03-08 11:00:00</td>\n",
-       "      <td>Pueyrredon.D</td>\n",
-       "      <td>D</td>\n",
-       "      <td>396</td>\n",
-       "      <td>0</td>\n",
-       "      <td>19</td>\n",
-       "      <td>415</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>2024-03-11 09:00:00</td>\n",
-       "      <td>Pueyrredon.D</td>\n",
-       "      <td>D</td>\n",
-       "      <td>417</td>\n",
-       "      <td>0</td>\n",
-       "      <td>16</td>\n",
-       "      <td>433</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>2024-03-06 08:00:00</td>\n",
-       "      <td>Pueyrredon.D</td>\n",
-       "      <td>D</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>2024-03-14 08:00:00</td>\n",
-       "      <td>Pueyrredon.D</td>\n",
-       "      <td>D</td>\n",
-       "      <td>390</td>\n",
-       "      <td>0</td>\n",
-       "      <td>13</td>\n",
-       "      <td>403</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>92</th>\n",
-       "      <td>2024-03-26 08:00:00</td>\n",
-       "      <td>Pueyrredon.D</td>\n",
-       "      <td>D</td>\n",
-       "      <td>438</td>\n",
-       "      <td>0</td>\n",
-       "      <td>26</td>\n",
-       "      <td>464</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>2024-03-08 09:00:00</td>\n",
-       "      <td>Pueyrredon.D</td>\n",
-       "      <td>D</td>\n",
-       "      <td>365</td>\n",
-       "      <td>0</td>\n",
-       "      <td>28</td>\n",
-       "      <td>393</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               datetime       station line  pax_pagos  pax_pases_pagos  \\\n",
-       "6   2024-03-04 09:00:00  Pueyrredon.D    D          0                0   \n",
-       "31  2024-03-10 11:00:00  Pueyrredon.D    D        104                0   \n",
-       "57  2024-03-17 09:00:00  Pueyrredon.D    D         41                0   \n",
-       "37  2024-03-12 09:00:00  Pueyrredon.D    D        344                0   \n",
-       "23  2024-03-08 11:00:00  Pueyrredon.D    D        396                0   \n",
-       "33  2024-03-11 09:00:00  Pueyrredon.D    D        417                0   \n",
-       "12  2024-03-06 08:00:00  Pueyrredon.D    D          0                0   \n",
-       "44  2024-03-14 08:00:00  Pueyrredon.D    D        390                0   \n",
-       "92  2024-03-26 08:00:00  Pueyrredon.D    D        438                0   \n",
-       "21  2024-03-08 09:00:00  Pueyrredon.D    D        365                0   \n",
-       "\n",
-       "    pax_franq  pax_TOTAL  \n",
-       "6           4          4  \n",
-       "31          0        104  \n",
-       "57          2         43  \n",
-       "37         23        367  \n",
-       "23         19        415  \n",
-       "33         16        433  \n",
-       "12          2          2  \n",
-       "44         13        403  \n",
-       "92         26        464  \n",
-       "21         28        393  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        pax_pagos  pax_pases_pagos   pax_franq   pax_TOTAL\n",
+      "count  116.000000       116.000000  116.000000  116.000000\n",
+      "mean   247.732759         0.112069   15.991379  263.836207\n",
+      "std    181.256741         0.367638   14.096250  192.869180\n",
+      "min      0.000000         0.000000    0.000000    1.000000\n",
+      "25%     73.750000         0.000000    4.000000   76.500000\n",
+      "50%    255.500000         0.000000   12.000000  276.000000\n",
+      "75%    424.000000         0.000000   26.000000  452.750000\n",
+      "max    520.000000         2.000000   58.000000  556.000000\n"
+     ]
     }
    ],
    "source": [
@@ -1749,7 +1599,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
