--- a/Lab_Week7_KNN/lab7_KNN copy.ipynb
+++ b/Lab_Week7_KNN/lab7_KNN copy.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1468,7 +1468,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".comp3122",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1482,7 +1482,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
