link to images modified for lab 11

--- a/Lab_Week11_LogisticRegression/credit_score_logreg.ipynb
+++ b/Lab_Week11_LogisticRegression/credit_score_logreg.ipynb
@@ -519,7 +519,7 @@
    "source": [
     "#### The bar chart shows that the data is imbalaced. That is the number of people with serious trouble is much less than those without.\n",
     "\n",
-    "<img src=\"./assets/unbalanced.webp\" width=\"600\" hight=\"300\" /> "
+    "<img src=\"https://raw.githubusercontent.com/PyDataGBC/PyData2025/refs/heads/main/Lab_Week11_LogisticRegression/assets/unbalanced.webp\" width=\"600\" hight=\"300\" /> "
    ]
   },
   {
@@ -544,7 +544,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./assets/baseline_for_classification.png\" width=\"600\" height=\"500\" />"
+    "<img src=\"https://raw.githubusercontent.com/PyDataGBC/PyData2025/refs/heads/main/Lab_Week11_LogisticRegression/assets/baseline_for_classification.png\" width=\"600\" height=\"500\" />"
    ]
   },
   {
@@ -856,7 +856,7 @@
    "source": [
     "#### Evaluate the base model using the confusion_matrix\n",
     "\n",
-    "<img src=\"./assets/confusion_matrix.svg\" width=\"800\" /> "
+    "<img src=\"https://raw.githubusercontent.com/PyDataGBC/PyData2025/60a92931f832544aebcfe09a9c26164015f9ed2a/Lab_Week11_LogisticRegression/assets/confusion_matrix.svg\" width=\"800\" /> "
    ]
   },
   {
@@ -1179,7 +1179,7 @@
    "source": [
     "#### Which model has higher type 1 error? and which model has higher type 2 error?\n",
     "\n",
-    "<img src=\"./assets/confusion_error_type.png\" width=\"600\" hight=\"300\" /> "
+    "<img src=\"https://raw.githubusercontent.com/PyDataGBC/PyData2025/refs/heads/main/Lab_Week11_LogisticRegression/assets/confusion_error_type.png\" width=\"600\" hight=\"300\" /> "
    ]
   },
   {
